--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,7 +1,10 @@
 <header>
-    <div class="logo"></div>
+    <div class="logo"><img src="" alt="" srcset=""></div>
     <nav class="nav">
         <ul>
+            <li>item </li>
+            <li>item </li>
+            <li>item </li>
             <li>item </li>
         </ul>
     </nav>
