--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,21 +1,28 @@
 /*css 註解*/
 $fontSize : 16px; // 數值
 $color : #333; // 顏色
-$bgc : #fff;//背景色
+$bgc : #fff; //背景色
 $fontFamily : '微軟正黑體'; //字串
 $margin : 10px 20px 5px 4px; // list
-
-
+$null : null; //空值 
+$w : false; // 用在判斷式上
 
 body {
-   margin: $margin;
-   padding: 0;
-   font-size: $fontSize;
-   color: $color;
-   background-color: $bgc;
-   font-family: $fontFamily;
+    margin: $margin;
+    padding: 0;
+    font-size: $fontSize;
+    color: $color;
+    background-color: $bgc;
+    font-family: $fontFamily;
+    border: $null;
 }
 
-
-
-
+.wrapper {
+    @if $w {
+        width: 100%;
+    }
+    @else {
+        width: 1200px;
+        margin: 0 auto;
+    }
+}
