--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,15 +48,44 @@ $a : 30px !default; //預設值
     font-size: $a;
 }
 
-//轉型字串
-$url : icon1;
+//======  轉型字串  ==========
+$url : icon1; //url
 
 .icon {
     background-image: url('#{$url}.jpg');
 }
 
-
+// class / 屬性
 $class : 'bottom';
+
 .#{$class} {
     margin-#{$class}: 10px;
+}
+
+.wrapper {
+    width: 100%;
+    background-color: rgb(0, 110, 255);
+    nav {
+        width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .logo {
+          width: 150px;
+          height: 50px;
+          background-color: #666;  
+        }
+
+        ul {
+            list-style: none;
+            display: flex;
+
+            li {
+                padding: 10px 20px;
+                background-color: rgb(247, 0, 255);
+
+            }
+        }
+    }
 }
