--- a/sass/style.scss
+++ b/sass/style.scss
@@ -65,6 +65,10 @@ $class : 'bottom';
 .wrapper {
     width: 100%;
     background-color: rgb(0, 110, 255);
+    h1 {
+      font-size: 36px;
+
+    }
     nav {
         width: 1200px;
         margin: 0 auto;
@@ -88,4 +92,19 @@ $class : 'bottom';
             }
         }
     }
+}
+
+.index {
+  h1 {
+    font-size: 40px;
+    color: aquamarine;
+  }
+
+}
+.about {
+  h1 {
+    font-size: 60px;
+    color: #666
+
+  }
 }
