--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ div {
   background-color: #e2e2e2;
 }
 .btn:hover {
-  background-color: #a3a3a3;
+  background-color: #494949;
 }
 
 /*# sourceMappingURL=style.css.map */
