--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  margin: 10px 20px 5px 4px;
+  margin: 10px;
   padding: 0;
   font-size: 16px;
   color: #333;
@@ -127,8 +127,7 @@ body {
 }
 
 .wrapper {
-  width: 1200px;
-  margin: 0 auto;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
