--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,9 @@
 @import 'base/color';
 @import 'base/common';
 
+// mixin
+@import 'mixin/mixin';
+
 // component
 @import 'components/btn';
 
@@ -172,10 +175,7 @@ $w : 1200;
 // mixin 
 $w : 1400px;
 
-@mixin border($borderColor , $borderRadius){
- border: 1px solid $borderColor;
- border-radius: $borderRadius;
-}
+
 
 //不好寫法
 // @mixin boxcenter($w , $top ,$borderColo ,$borderRadius ){
@@ -186,11 +186,7 @@ $w : 1400px;
 //  }
 
 
-@mixin boxcenter($w , $top: 0px){
-   width: $w; 
-   margin: $top auto 0;
-   @include border(#333, 10px); 
-}
+
 
 .box-1 {
  @include boxcenter(200px);
@@ -211,19 +207,8 @@ $w : 1400px;
   margin: 0 auto;
 }
 
-
-@mixin layout($w){
-    @if $w == 'full' {
-        width: 100%;
-      }@else{
-        width: $w + px;
-        margin: 0 auto;
-      }
-}
-
-
 .wrapper {
-   @include layout(1200);
+   @include layout(full);
 }
 
 
