--- a/css/style.css
+++ b/css/style.css
@@ -151,4 +151,544 @@ body {
   }
 }
 
+.box-1 {
+  width: 1px;
+}
+
+.box-2 {
+  width: 2px;
+}
+
+.box-3 {
+  width: 3px;
+}
+
+.box-4 {
+  width: 4px;
+}
+
+.box-5 {
+  width: 5px;
+}
+
+.box-6 {
+  width: 6px;
+}
+
+.box-7 {
+  width: 7px;
+}
+
+.box-8 {
+  width: 8px;
+}
+
+.box-9 {
+  width: 9px;
+}
+
+.box-10 {
+  width: 10px;
+}
+
+.push-1 {
+  position: relative;
+  left: 1px;
+}
+
+.push-2 {
+  position: relative;
+  left: 2px;
+}
+
+.push-3 {
+  position: relative;
+  left: 3px;
+}
+
+.push-4 {
+  position: relative;
+  left: 4px;
+}
+
+.push-5 {
+  position: relative;
+  left: 5px;
+}
+
+.push-6 {
+  position: relative;
+  left: 6px;
+}
+
+.push-7 {
+  position: relative;
+  left: 7px;
+}
+
+.push-8 {
+  position: relative;
+  left: 8px;
+}
+
+.push-9 {
+  position: relative;
+  left: 9px;
+}
+
+.push-10 {
+  position: relative;
+  left: 10px;
+}
+
+.push-11 {
+  position: relative;
+  left: 11px;
+}
+
+.push-12 {
+  position: relative;
+  left: 12px;
+}
+
+.push-13 {
+  position: relative;
+  left: 13px;
+}
+
+.push-14 {
+  position: relative;
+  left: 14px;
+}
+
+.push-15 {
+  position: relative;
+  left: 15px;
+}
+
+.push-16 {
+  position: relative;
+  left: 16px;
+}
+
+.push-17 {
+  position: relative;
+  left: 17px;
+}
+
+.push-18 {
+  position: relative;
+  left: 18px;
+}
+
+.push-19 {
+  position: relative;
+  left: 19px;
+}
+
+.push-20 {
+  position: relative;
+  left: 20px;
+}
+
+.push-21 {
+  position: relative;
+  left: 21px;
+}
+
+.push-22 {
+  position: relative;
+  left: 22px;
+}
+
+.push-23 {
+  position: relative;
+  left: 23px;
+}
+
+.push-24 {
+  position: relative;
+  left: 24px;
+}
+
+.push-25 {
+  position: relative;
+  left: 25px;
+}
+
+.push-26 {
+  position: relative;
+  left: 26px;
+}
+
+.push-27 {
+  position: relative;
+  left: 27px;
+}
+
+.push-28 {
+  position: relative;
+  left: 28px;
+}
+
+.push-29 {
+  position: relative;
+  left: 29px;
+}
+
+.push-30 {
+  position: relative;
+  left: 30px;
+}
+
+.push-31 {
+  position: relative;
+  left: 31px;
+}
+
+.push-32 {
+  position: relative;
+  left: 32px;
+}
+
+.push-33 {
+  position: relative;
+  left: 33px;
+}
+
+.push-34 {
+  position: relative;
+  left: 34px;
+}
+
+.push-35 {
+  position: relative;
+  left: 35px;
+}
+
+.push-36 {
+  position: relative;
+  left: 36px;
+}
+
+.push-37 {
+  position: relative;
+  left: 37px;
+}
+
+.push-38 {
+  position: relative;
+  left: 38px;
+}
+
+.push-39 {
+  position: relative;
+  left: 39px;
+}
+
+.push-40 {
+  position: relative;
+  left: 40px;
+}
+
+.push-41 {
+  position: relative;
+  left: 41px;
+}
+
+.push-42 {
+  position: relative;
+  left: 42px;
+}
+
+.push-43 {
+  position: relative;
+  left: 43px;
+}
+
+.push-44 {
+  position: relative;
+  left: 44px;
+}
+
+.push-45 {
+  position: relative;
+  left: 45px;
+}
+
+.push-46 {
+  position: relative;
+  left: 46px;
+}
+
+.push-47 {
+  position: relative;
+  left: 47px;
+}
+
+.push-48 {
+  position: relative;
+  left: 48px;
+}
+
+.push-49 {
+  position: relative;
+  left: 49px;
+}
+
+.push-50 {
+  position: relative;
+  left: 50px;
+}
+
+.push-51 {
+  position: relative;
+  left: 51px;
+}
+
+.push-52 {
+  position: relative;
+  left: 52px;
+}
+
+.push-53 {
+  position: relative;
+  left: 53px;
+}
+
+.push-54 {
+  position: relative;
+  left: 54px;
+}
+
+.push-55 {
+  position: relative;
+  left: 55px;
+}
+
+.push-56 {
+  position: relative;
+  left: 56px;
+}
+
+.push-57 {
+  position: relative;
+  left: 57px;
+}
+
+.push-58 {
+  position: relative;
+  left: 58px;
+}
+
+.push-59 {
+  position: relative;
+  left: 59px;
+}
+
+.push-60 {
+  position: relative;
+  left: 60px;
+}
+
+.push-61 {
+  position: relative;
+  left: 61px;
+}
+
+.push-62 {
+  position: relative;
+  left: 62px;
+}
+
+.push-63 {
+  position: relative;
+  left: 63px;
+}
+
+.push-64 {
+  position: relative;
+  left: 64px;
+}
+
+.push-65 {
+  position: relative;
+  left: 65px;
+}
+
+.push-66 {
+  position: relative;
+  left: 66px;
+}
+
+.push-67 {
+  position: relative;
+  left: 67px;
+}
+
+.push-68 {
+  position: relative;
+  left: 68px;
+}
+
+.push-69 {
+  position: relative;
+  left: 69px;
+}
+
+.push-70 {
+  position: relative;
+  left: 70px;
+}
+
+.push-71 {
+  position: relative;
+  left: 71px;
+}
+
+.push-72 {
+  position: relative;
+  left: 72px;
+}
+
+.push-73 {
+  position: relative;
+  left: 73px;
+}
+
+.push-74 {
+  position: relative;
+  left: 74px;
+}
+
+.push-75 {
+  position: relative;
+  left: 75px;
+}
+
+.push-76 {
+  position: relative;
+  left: 76px;
+}
+
+.push-77 {
+  position: relative;
+  left: 77px;
+}
+
+.push-78 {
+  position: relative;
+  left: 78px;
+}
+
+.push-79 {
+  position: relative;
+  left: 79px;
+}
+
+.push-80 {
+  position: relative;
+  left: 80px;
+}
+
+.push-81 {
+  position: relative;
+  left: 81px;
+}
+
+.push-82 {
+  position: relative;
+  left: 82px;
+}
+
+.push-83 {
+  position: relative;
+  left: 83px;
+}
+
+.push-84 {
+  position: relative;
+  left: 84px;
+}
+
+.push-85 {
+  position: relative;
+  left: 85px;
+}
+
+.push-86 {
+  position: relative;
+  left: 86px;
+}
+
+.push-87 {
+  position: relative;
+  left: 87px;
+}
+
+.push-88 {
+  position: relative;
+  left: 88px;
+}
+
+.push-89 {
+  position: relative;
+  left: 89px;
+}
+
+.push-90 {
+  position: relative;
+  left: 90px;
+}
+
+.push-91 {
+  position: relative;
+  left: 91px;
+}
+
+.push-92 {
+  position: relative;
+  left: 92px;
+}
+
+.push-93 {
+  position: relative;
+  left: 93px;
+}
+
+.push-94 {
+  position: relative;
+  left: 94px;
+}
+
+.push-95 {
+  position: relative;
+  left: 95px;
+}
+
+.push-96 {
+  position: relative;
+  left: 96px;
+}
+
+.push-97 {
+  position: relative;
+  left: 97px;
+}
+
+.push-98 {
+  position: relative;
+  left: 98px;
+}
+
+.push-99 {
+  position: relative;
+  left: 99px;
+}
+
+.push-100 {
+  position: relative;
+  left: 100px;
+}
+
 /*# sourceMappingURL=style.css.map */
