--- a/sass/style.scss
+++ b/sass/style.scss
@@ -228,6 +228,21 @@ $w : 1400px;
 }
 
 
+//迴圈
+
+@for $i from 1 through 10 {
+ .box-#{$i} {
+    width: $i * 1px;
+ }
+}
+
+
+@for $i from 1 through 100 {
+  .push-#{$i} {
+    position: relative;
+    left: $i * 1px
+  }
+}
 
 
 
