add bg color  each

--- a/css/style.css
+++ b/css/style.css
@@ -288,46 +288,6 @@ body {
   }
 }
 
-.box-1 {
-  width: 1px;
-}
-
-.box-2 {
-  width: 2px;
-}
-
-.box-3 {
-  width: 3px;
-}
-
-.box-4 {
-  width: 4px;
-}
-
-.box-5 {
-  width: 5px;
-}
-
-.box-6 {
-  width: 6px;
-}
-
-.box-7 {
-  width: 7px;
-}
-
-.box-8 {
-  width: 8px;
-}
-
-.box-9 {
-  width: 9px;
-}
-
-.box-10 {
-  width: 10px;
-}
-
 .box {
   content: value1;
 }
@@ -371,6 +331,38 @@ span {
 * {
   font-size: 14px;
   color: #f20;
+}
+
+.text-primary {
+  color: #ff7300;
+}
+
+.bg-primary {
+  background-color: #ff7300;
+}
+
+.text-secondary {
+  color: #0ed7ff;
+}
+
+.bg-secondary {
+  background-color: #0ed7ff;
+}
+
+.text-success {
+  color: #00fc00;
+}
+
+.bg-success {
+  background-color: #00fc00;
+}
+
+.text-info {
+  color: #e4e4e4;
+}
+
+.bg-info {
+  background-color: #e4e4e4;
 }
 
 /*# sourceMappingURL=style.css.map */
