--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,27 @@
 body {
    font-size: 20px;
-   color: aqua;
+   background-color: rgb(0, 255, 170);
+   color: rgb(255, 242, 0);
+  
  .wrapper {
      width: 1200px;
      margin:  0 auto;
+     height: 3000px;
+     background-color: rgb(52, 52, 52);
+     ul , li {
+      list-style: none;
+      margin: 0 ;
+      padding: 0;
+      // height: 3000px;
+     }
+     ul {
+     display: flex;
+     li {
+       margin: 0 20px;
+     }
+     }
+     h3 {
+      font-size: 100px;
+    }
  }
 }
