--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,7 @@
 @import 'layout/footer';
 @import 'layout/login';
 @import 'layout/nav';
+@import 'layout/index/section01';
 
 // css => @import url();
 
